# try-iced

./: Cargo.toml  try-ice.desktop
src/: main.rs
